# gravel

./: CMakeLists.txt  Parser.cpp  Parser.h  README.md  coder.cpp  coder.h  csoundIntruments.csd  csoundparser.cpp  csoundparser.h  dialogaudiosetup.cpp  dialogaudiosetup.h  dialogaudiosetup.ui  highlighter.cpp  highlighter.h  instrumentdefinition.cpp  instrumentdefinition.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parameter.cpp  parameter.h  patternEvent.cpp  patternEvent.h  samplelistmodel.cpp  samplelistmodel.h  samplemapper.cpp  samplemapper.h  samplemapper.ui  sequence.cpp  sequence.h  soundengine.cpp  soundengine.h  syncsetup.cpp  syncsetup.h  syncsetup.ui  track.cpp  track.h
Documentation/: introduction.md  language.md  parameter.md
